Set the number of threads according to: Runtime.getRuntime().availableProcessors()
Signed-off-by: Charles Moulliard <cmoulliard@ibm.com>